[package]
name = "xt-bot-wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
dotenv = "0.15.0"
mwbot = { git = "https://gitlab.wikimedia.org/repos/mwbot-rs/mwbot.git", version = "0.6.0" }
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
similar = "2.3.0"
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
