[package]
name = "delinter"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
kuchikiki = "0.8.2"
lazy_static = "1.4.0"
mwbot = "0.6.0"
mysql_async = {version = "0.33.0", default-features = false, features = ["minimal"]}
regex = "1.7.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.94"
tokio = {version = "1", features = ["full"]}
# toolforge = {version = "5.5.0", features = ["mysql"]}
toolforge = {version = "5.6.0", features = ["mysql"]}
tracing = "0.1.37"
urlencoding = "2.1.2"
