[package]
name = "delinter"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
default-run = "delinter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mcwzh: upgrade anyhow to use backtrace
anyhow = { version = "1.0.86", features = ["backtrace"] }
kuchikiki = "0.8.2"
lazy_static = "1.4.0"
# mcwzh: upgrade to allow parsoid result without etag
mwbot = "0.7.0-rc.2"
mysql_async = {version = "0.34.0", default-features = false, features = ["minimal"]}
regex = "1.7.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.94"
tera = "1.20.0"
tokio = {version = "1", features = ["full"]}
toolforge = {version = "5.6.0", features = ["mysql"]}
tracing = "0.1.37"
urlencoding = "2.1.2"
